Added task state enumeration.
